--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=19001'"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "date-fns": "^1.29.0",
     "expo": "^30.0.1",
     "react": "16.3.1",
@@ -18,8 +19,12 @@
     "react-native-snap-carousel": "^3.7.4",
     "react-native-star-rating": "^1.1.0",
     "react-navigation": "^2.16.0",
+    "react-navigation-redux-helpers": "^2.0.6",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^3.4.9"
   },
   "devDependencies": {
